updated db initializing: input file stream